--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "axios": "^1.3.4",
+    "dayjs": "^1.11.7",
     "flowbite": "^1.6.3",
     "flowbite-datepicker": "^1.2.2",
     "flowbite-windicss-plugin": "^0.1.3",
